fixed link not showing text

--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,6 @@ body.hiderbody{
   .slider.round:before {
     border-radius: 50%;
   }
-.r-m611by{
+  .r-1l5qxre{
     display: none !important;
   }
